feat: add navigation links for weight and temperature converters

--- a/templates/length.html
+++ b/templates/length.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Length Converter</h1>
+
+    <nav>
+      <a href="/">Length</a>
+      <a href="/weight">Weight</a>
+      <a href="/temperature">Temperature</a>
+    </nav>
     <form method="POST" action="/">
       <label>Value to convert:</label>
       <input type="text" name="value" required /><br /><br />
